--- a/config/alerts_config.json
+++ b/config/alerts_config.json
@@ -2,9 +2,9 @@
   "check_interval": "10s",
   "storage_alerts": {
     "enabled": true,
-    "threshold_percent": 70,
+    "threshold_percent": 90,
     "sustained_duration": "10s",
-    "notification_interval": "20s"
+    "notification_interval": "5m"
   },
   "cpu_alerts": {
     "enabled": true,
